--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://lcontzen.github.com
-title: My Octopress Blog
+title: Laurent's blog
 subtitle: A blogging framework for hackers.
-author: Your Name
+author: Laurent Contzen
 simple_search: http://google.com/search
 description:
 
@@ -64,7 +64,7 @@ github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: lcontzen
 twitter_tweet_count: 4
 twitter_show_replies: false
 twitter_follow_button: true
