Removed blog subtitle

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://lcontzen.github.com
 title: Laurent's blog
-subtitle: A blogging framework for hackers.
+subtitle: 
 author: Laurent Contzen
 simple_search: http://google.com/search
 description:
